--- a/style.css
+++ b/style.css
@@ -7,10 +7,22 @@ div
 {
     text-align: center;
 }
-table
-{
+table {
+    vertical-align: middle;
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+td, th {
+    border: 1px solid #dddddd;
     text-align: center;
-}
+    padding: 8px;
+  }
+  
+tr:nth-child(even) {
+    background-color: #dddddd;
+  }
 div#d1
 {
     display: none;
